--- a/SparkleTesting/appsettings.json
+++ b/SparkleTesting/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=SparkleTestingDb;User Id=SparkleUser;Password=wjdbHCs|nvS|>ZnuqokFcpiymsFT7_&#$!~<dnjeu|wjuQe|;"
+  },
+  "Jwt": {
+    "Key": "iNivDmHLpUA223sqsfhqGbNRdPj1PVkH",
+    "Issuer": "https://securetoken.google.com/sparkleauth",
+    "Audience": "sparkleauth",
+    "ValidFor": "2w"
+  }
 }
