--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /SparkleTesting/Views/Test/Index.cshtml
 /SparkleTesting/Controllers/TestController.cs
 SparkleTesting/sparkleauth-firebase-adminsdk.json
+/FirebaseSecrets
