--- a/SparkleTesting.Application/SparkleTesting.Application.csproj
+++ b/SparkleTesting.Application/SparkleTesting.Application.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="morelinq" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SparkleTesting.Domain\SparkleTesting.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
