Fix 404 responce instead of 401, add auth feature to swagger

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 /SparkleTesting/Controllers/TestController.cs
 SparkleTesting/sparkleauth-firebase-adminsdk.json
 /FirebaseSecrets
+/SparkleTesting/Properties/PublishProfiles/FolderProfile.pubxml
