--- a/SparkleTesting/appsettings.Development.json
+++ b/SparkleTesting/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=SparkleTestingDb;User Id=SparkleUser;Password=wjdbHCs|nvS|>ZnuqokFcpiymsFT7_&#$!~<dnjeu|wjuQe|;"
   }
 }
