--- a/SparkleTesting/appsettings.json
+++ b/SparkleTesting/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=SparkleTestingDb;User Id=SparkleUser;Password=wjdbHCs|nvS|>ZnuqokFcpiymsFT7_&#$!~<dnjeu|wjuQe|;"
+    "Default": "Server=sql6005.site4now.net;Database=DB_A47A32_sparkle;User Id=DB_A47A32_sparkle_admin;Password=123QWEasd_;"
   },
   "Jwt": {
     "Key": "iNivDmHLpUA223sqsfhqGbNRdPj1PVkH",
@@ -15,3 +15,5 @@
     "ValidFor": "2w"
   }
 }
+
+
