--- a/SparkleTesting/Properties/launchSettings.json
+++ b/SparkleTesting/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:49704",
-      "sslPort": 44300
+      "sslPort": 0
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -15,7 +15,8 @@
       "launchUrl": "test/index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "ancmHostingModel": "OutOfProcess"
     },
     "SparkleTesting": {
       "commandName": "Project",
