--- a/SparkleTesting/web.config
+++ b/SparkleTesting/web.config
@@ -7,11 +7,10 @@
       <remove name="aspNetCore" />
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout">
       <environmentVariables>
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         <environmentVariable name="GOOGLE_APPLICATION_CREDENTIALS" value="C:\Users\Demestrus\source\repos\SparkleTesting\FirebaseSecrets\sparkleauth-firebase-adminsdk.json" />
-        <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44300" />
         <environmentVariable name="COMPLUS_ForceENC" value="1" />
       </environmentVariables>
     </aspNetCore>
