--- a/SparkleTesting.Persistence/SparkleTesting.Persistence.csproj
+++ b/SparkleTesting.Persistence/SparkleTesting.Persistence.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190420085556_TestAttempts.cs" />
+    <Compile Remove="Migrations\20190420085556_TestAttempts.Designer.cs" />
+    <Compile Remove="Migrations\20190420085918_TestAttempts.cs" />
+    <Compile Remove="Migrations\20190420085918_TestAttempts.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
