--- a/SparkleTesting.Persistence/SparkleTesting.Persistence.csproj
+++ b/SparkleTesting.Persistence/SparkleTesting.Persistence.csproj
@@ -9,6 +9,10 @@
     <Compile Remove="Migrations\20190420085556_TestAttempts.Designer.cs" />
     <Compile Remove="Migrations\20190420085918_TestAttempts.cs" />
     <Compile Remove="Migrations\20190420085918_TestAttempts.Designer.cs" />
+    <Compile Remove="Migrations\20190420134555_PassFills.cs" />
+    <Compile Remove="Migrations\20190420134555_PassFills.Designer.cs" />
+    <Compile Remove="Migrations\20190420134721_PassFills.cs" />
+    <Compile Remove="Migrations\20190420134721_PassFills.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
