Add automapper, profile mappings, add logic to change and get user profiles.

--- a/SparkleTesting.Application/SparkleTesting.Application.csproj
+++ b/SparkleTesting.Application/SparkleTesting.Application.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SparkleTesting.Domain\SparkleTesting.Domain.csproj" />
+    <ProjectReference Include="..\SparkleTesting.Persistence\SparkleTesting.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
